# RT-DETR

./: install_dependencies.sh
rtdetrv2_pytorch/: pyproject.toml
rtdetrv2_pytorch/references/deploy/: rtdetrv2_torch.py
